# Comfyui_FOCUS_nodes

./: .gitignore  README.md  __init__.py  pyproject.toml
focus_nodes/: control_pipe_FN.py  display_text_FN.py  focus_upscale_FN.py  global_seed_FN.py  ksampler_settings_FN.py  model_unloader_FN.py  prompt_box_FN.py  sdxl_all_in_one_FN.py  sdxl_control_module_FN.py  sdxl_preprocess_FN.py  server_FN.py  style_injector_FN.py  style_selector_FN.py  wildcard_processor_FN.py
focus_styles/: .~lock.focus_styles.csv#  focus_styles.csv
focus_wildcards/: actions.txt  age.txt  beachwear.txt  boudoir_pose.txt  breast_type.txt  clothes_bottom.txt  clothes_upper.txt  face_morph.txt  fantasy_action.txt  fantasy_location.txt  female_fantasy_hair.txt  female_name.txt  haircolor.txt  hairstyle.txt  location.txt  locations.txt  malename.txt  photographer.txt  portrait_photographer.txt  surname.txt  tattoo.txt  tattoo_style.txt
focus_workflows/: metadata_inject.py
js/: common.js  focus-pack.js  prompt.js  seed.js  text.js
