tribefull[project]
name = "focus_nodes"
description = "A collection of nodes designed for efficiency and the reduction of screen-clutter. Includes a Global Seed controller with boolean toggles, SDXL All-in-One conditioner, a custom SDXL control module, Wildcard processor, Style Injector, and more."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/DJ-Tribefull/Comfyui_FOCUS_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "tribefull"
DisplayName = "Comfyui_FOCUS_nodes"
Icon = "⚜️"
